--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "mocha": "^10.2.0",
     "viem": "^1.19.3"
   }
 }
