--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "crosslink-sdk",
-  "version": "1.0.1",
+  "name": "openccip-sdk",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
