test new open-ccip sdk

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "mocha": "^10.2.0",
+    "openccip-sdk": "^1.0.1",
     "viem": "^1.19.6"
   }
 }
